# Info_my_full

./: README.md  android_jetpack.md  android_theori_and_practice.md  electronika_arduino_and_esp32.md  keras.md  learning_kotlin.md  markdown_styling.md  opencv.md
android/: README.md  android_jetpack.md  android_network.md  android_theori_and_practice.md  creating_appearance.md  incoming_tasks.md  kotlin_code_examples.md
markdown/: README.md  markdown_styling.md  markdown_syntax.md
microelectronics/: README.md
microelectronics/ESP32/: electronika_esp32.md  electronika_esp32_wifi.md
microelectronics/arduino/: electronika_arduino.md
microelectronics/micro_components/: micro_components.md
microelectronics/orangepi/: electronika_orangepi.md
microelectronics/protocols/: README.md
microelectronics/protocols/pelco/: protocol_pelco_d.md
microelectronics/radio_electronics/: radiosvyaz.md
microelectronics/raspberrypi/: electronika_raspberrypi.md
microelectronics/videosystems/: README.md
neuro_net/: README.md  dc_deepcnn.md  neuro_net_keras.md
neuro_net/face_recognition/: py_opencv_face_recognition.md
neuro_net/opencv/: neuro_net_opencv.md  started_opencv.md
programming_languages/: README.md
programming_languages/bash/: language_bash.md
programming_languages/c/: language_c.md
programming_languages/cpp/: language_cpp.md
programming_languages/python/: language_python.md  language_python_lib.md
programming_languages/qt_quick/: README.md
programming_languages/qt_quick/project/Stopwatch/: CMakeLists.txt  Main.qml  README.md  main.cpp  stopwatch.cpp  stopwatch.h
protocols/: README.md
protocols/mavlink/: protocol_mavlink.md
protocols/pelco/: protocol_pelco_d.md
protocols/sbus/: protocol_sbus.md
video_processing/face_recogn/: face_recogn.py
video_processing/video stabilization/: face_tracking.py  nastroy_resolution_cam.py  no_stab_video_duo_frame.py  save_video.py  stab_video.py  stab_video_work_2.py  stream_video_0.py  stream_video_2.py
video_stabilization/: README.md
video_stabilization/mouse_event/: mouse_ev.py
video_stabilization/video/: face_tracking.py
video_stabilization/video_slegenie/: pr.py  video.py
video_stabilization/video_stab_python/: change_color.py  face_tracking.py  nastroy_resolution_cam.py  nastroy_resolution_cam_2.py  no_stab_video_duo_frame.py  save_video.py  stab_video.py  stab_video_ubuntu.py  stab_video_work.py  stab_video_work_2.py  stream_video_1.py  stream_video_2.py
(+69 files in other folders)
